# scclrR

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  _pkgdown.yml  scclrR.Rproj
.github/workflows/: pkgdown.yaml
R/: api.R  rust.R  scclrR-package.R  seurat.R  utils.R
inst/extdata/: README.md  angelidis_lung_pseudobulk_genes.csv  angelidis_lung_pseudobulk_samples.csv
man/: estimate_overdispersion.Rd  normalize_matrix.Rd  pca_matrix.Rd  pflog.Rd  pflogpf.Rd  run_pca.Rd  scclrR-package.Rd
src/: Makevars  Makevars.win  init.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-matrix-api.R
vignettes/: seurat-pflog.Rmd  seurat-pflogpf.Rmd
